# CodeAnalyzer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  meson.build  meson.options
source/: CMakeLists.txt  meson.build
source/bindings/: CMakeLists.txt  meson.build
source/c_src/: CMakeLists.txt  meson.build
source/c_src/analyzers/: CMakeLists.txt  meson.build
source/c_src/analyzers/private/: AnalyzerFactoryImpl.h
source/c_src/analyzers/private/c/drivers/: ClangCompileCommandDriver.cpp  GCCCompileCommandDriver.cpp  MSVCCompileCommandDriver.cpp
source/c_src/analyzers/private/c/flow/: CCFGBuilder.h  CDataFlowAnalyzer.h  CLivenessAnalyzer.h
source/c_src/analyzers/private/c/include/: CIncludeGraphBuilder.h
source/c_src/analyzers/private/c/macro/: CMacroAnalyzer.h  CMacroExpansionEngine.h
source/c_src/analyzers/private/c/memory/: CMemoryLeakAnalyzer.h
source/c_src/analyzers/private/c/misc/: CUnsafeFunctionChecker.h
source/c_src/analyzers/private/c/semantic/: CReturnChecker.h  CUnreachableCodeDetector.h
source/c_src/analyzers/private/c/symbol/: CSymbol.h
source/c_src/analyzers/private/c/type/: CTypeSystem.h
source/c_src/analyzers/public/: AnalyzerFactory.h  IAnalyzer.h  ICompileCommandDriver.h  Language.h
source/c_src/analyzers/public/c/core/: CAnalyzer.h
source/c_src/analyzers/public/c/core/include/: CIncludeAnalyzer.h
source/c_src/analyzers/public/c/core/memory/: CPointerSafetyAnalyzer.h
source/c_src/analyzers/public/c/core/misc/: CStyleChecker.h
source/c_src/analyzers/public/c/core/parser/: CASTBuilder.h
source/c_src/analyzers/public/c/core/semantic/: CSemanticChecker.h
source/c_src/analyzers/public/c/core/symbol/: CSymbolResolver.h  CSymbolTable.h
source/c_src/analyzers/public/c/core/type/: CTypeChecker.h
source/c_src/analyzers/public/c/drivers/: ClangCompileCommandDriver.h  GCCCompileCommandDriver.h  MSVCCompileCommandDriver.h
source/c_src/analyzers/public/core/analyzer/: Analyzer.h
source/c_src/analyzers/public/core/context/: AnalysisContext.h
source/c_src/analyzers/public/core/factory/: CompileCommandDriverFactory.h
source/c_src/analyzers/public/core/ir/: ComplexityAnalyzer.h  ControlFlowAnalyzer.h  DependencyGraph.h  IRIndex.h
source/c_src/analyzers/public/core/report/: AnalysisResult.h  ReportBuilder.h
source/c_src/analyzers/public/core/rule_engine/: RuleEngine.h  RuleRegistry.h
source/c_src/common/: CMakeLists.txt  meson.build
source/c_src/common/private/ca_char/: ca_char_basic.cpp  ca_char_defs.cpp  ca_char_errors.cpp
source/c_src/common/private/ca_io/core/posix/internal/: posix_translater.h
source/c_src/common/private/ca_io/core/win32/internal/: win32_translater.h
source/c_src/common/private/ca_math/: ca_math_func.cpp  ca_math_func.tpp  temp.cpp
source/c_src/common/private/ca_platform/: temp.cpp
source/c_src/common/private/ca_platform/file/posix/: file.c  file.cpp  file_error.cpp  file_path.cpp  file_temp.cpp
source/c_src/common/private/ca_platform/file/posix/internal/: posix_translater.h
source/c_src/common/private/ca_platform/file/win32/: file.c  file.cpp  file_error.cpp  file_path.cpp  file_temp.cpp
source/c_src/common/private/ca_platform/file/win32/internal/: win32_translater.h
source/c_src/common/private/ca_string/: ca_buffer.cpp  ca_buffer.tpp  ca_char.cpp  ca_char.tpp  ca_fastsearch.cpp  ca_fastsearch.tpp  ca_stream.cpp  ca_utf8_utils.cpp
source/c_src/common/public/ca_char/: ca_char.h  ca_char_basic.h  ca_char_defs.h  ca_char_errors.h
source/c_src/common/public/ca_io/: ca_io_core.h
source/c_src/common/public/ca_io/core/: ca_io_file.h  ca_io_file_rw.h  ca_io_folder.h  ca_io_path.h
source/c_src/common/public/ca_io/core/rw/: ca_io_file_rw_asyn.h  ca_io_file_rw_sync.h
source/c_src/common/public/ca_math/: ca_float.h  ca_int.h  ca_math.h  ca_math_func.h  ca_math_type_list.h
source/c_src/common/public/ca_misc/: ca_base_macros.h
source/c_src/common/public/ca_platform/: CMakeLists.txt  ca_platform.h  ca_platform_file.h  ca_platform_thread.h
source/c_src/common/public/ca_platform/config/: PlatformDetect.cmake  config.h.in
source/c_src/common/public/ca_platform/file/: file.h  file_defs.h  file_error.h  file_path.h  file_temp.h
source/c_src/common/public/ca_string/: ca_buffer.h  ca_char.h  ca_char_types.h  ca_fastsearch.h  ca_stream.h  ca_string.h  ca_utf8_utils.h
source/c_src/common/tests/: CMakeLists.txt  meson.build
source/c_src/common/tests/ca_math/: meson.build  test_ca_math_func.cpp
source/c_src/common/tests/ca_string/: meson.build  test_ca_char.cpp  test_ca_fastsearch.cpp  test_ca_utf8_utils.cpp
source/c_src/core/: meson.build
source/cli/: CMakeLists.txt  meson.build
temp/: CMakeLists.txt
