# ================================
# CodeAnalyzer - source/c_src/common/tests/ca_math/meson.build
#
# Math library tests
# ================================

#test_ca_math = files(fs.glob('test_*.cpp'))
#
#foreach t : test_ca_math
#    test_name = t.stem()
#    test_exe = executable(test_name,
#                          t,
#                          dependencies : ca_math_dep
#    )
#    test(test_name, test_exe, suite : ['ca_math', 'common', 'all'])
#endforeach