# ================================
# CodeAnalyzer - source/c_src/common/tests/ca_string/meson.build
#
# String library tests
# ================================
#test_ca_string = files(fs.glob('test_*.cpp'))
#
#foreach t : test_ca_string
#    test_name = t.stem()
#    test_exe = executable(test_name,
#                          t,
#                          dependencies : ca_string_dep
#    )
#    test(test_name, test_exe, suite : ['ca_string', 'common', 'all'])
#endforeach
